
----------------------------------------
Release Notes for TriBITS
----------------------------------------


Trilinos 11.3:
--------------

(*) Fixed the generation of headers for explicit instantation system for
subpackages: Now subpackages that use the macro
TRIBITS_CREATE_CLIENT_TEMPLATE_HEADERS() to generate XXX.hpp header files with
or without expliict instantation will key off of the parent package's explicit
instantation setting.  In addition, packages that use the macro
TRIBITS_CREATE_CLIENT_TEMPLATE_HEADERS() will also need to add a call to
TRIBITS_ADD_EXPLICIT_INSTANTIATION_OPTION() in their top-level CMakeLists.txt
file.

