@@ -115,6 +115,7 @@ ENDFUNCTION()
 #     | PASS_REGULAR_EXPRESSION "<regex1>;<regex2>;..."]
 #   [FAIL_REGULAR_EXPRESSION "<regex1>;<regex2>;..."]
 #   [WILL_FAIL]
+#   [ENVIRONMENT <var1>=<value1> <var2>=<value2> ...]
 #   [INSTALLABLE]
 #   )
 #
@@ -150,7 +151,7 @@ FUNCTION(TRIBITS_ADD_EXECUTABLE_AND_TEST EXE_NAME)
      #prefix
      PARSE
      #lists
-     "SOURCES;DEPLIBS;NAME;NAME_POSTFIX;NUM_MPI_PROCS;DIRECTORY;KEYWORDS;COMM;ARGS;NAME;PASS_REGULAR_EXPRESSION;CATEGORIES;HOST;XHOST;XHOST_TEST;HOSTTYPE;XHOSTTYPE;XHOSTTYPE_TEST;FAIL_REGULAR_EXPRESSION;LINKER_LANGUAGE;DEFINES"
+     "SOURCES;DEPLIBS;NAME;NAME_POSTFIX;NUM_MPI_PROCS;DIRECTORY;KEYWORDS;COMM;ARGS;NAME;PASS_REGULAR_EXPRESSION;FAIL_REGULAR_EXPRESSION;ENVIRONMENT;CATEGORIES;HOST;XHOST;XHOST_TEST;HOSTTYPE;XHOSTTYPE;XHOSTTYPE_TEST;LINKER_LANGUAGE;DEFINES"
      #options
      "STANDARD_PASS_OUTPUT;WILL_FAIL;TIMEOUT;ADD_DIR_TO_NAME;INSTALLABLE;NOEXEPREFIX;NOEXESUFFIX"
      ${ARGN}
@@ -203,6 +204,7 @@ FUNCTION(TRIBITS_ADD_EXECUTABLE_AND_TEST EXE_NAME)
   TRIBITS_FWD_PARSE_ARG(CALL_ARGS ARGS)
   TRIBITS_FWD_PARSE_ARG(CALL_ARGS PASS_REGULAR_EXPRESSION)
   TRIBITS_FWD_PARSE_ARG(CALL_ARGS FAIL_REGULAR_EXPRESSION)
+  TRIBITS_FWD_PARSE_ARG(CALL_ARGS ENVIRONMENT)
   TRIBITS_FWD_PARSE_OPT(CALL_ARGS STANDARD_PASS_OUTPUT)
   TRIBITS_FWD_PARSE_OPT(CALL_ARGS WILL_FAIL)
   TRIBITS_FWD_PARSE_OPT(CALL_ARGS TIMEOUT)
