@@ -433,6 +433,10 @@ MACRO(TRIBITS_PRIVATE_ADD_TEST_SET_PASS_PROPERTY TEST_NAME_IN)
     SET_TESTS_PROPERTIES(${TEST_NAME_IN} PROPERTIES TIMEOUT ${PARSE_TIMEOUT})
   ENDIF()
 
+  IF (PARSE_ENVIRONMENT)
+    SET_PROPERTY(TEST ${TEST_NAME_IN} PROPERTY ENVIRONMENT ${PARSE_ENVIRONMENT})
+  ENDIF()
+
 ENDMACRO()
 
 
