@@ -269,3 +269,21 @@ IF (PERL_EXECUTABLE AND TrilinosFramework_ENABLE_RUNS_FOREVER_TEST)
     )
 
 ENDIF()
+
+# ENVIRONMENT
+
+TRIBITS_ADD_TEST( ${CMAKE_COMMAND} NOEXEPREFIX NOEXESUFFIX
+  NAME CTestScripts_TAT_pass_env
+  ARGS "-P ${CMAKE_CURRENT_SOURCE_DIR}/EchoEnvVarForTest.cmake"
+  NUM_MPI_PROCS 1
+  ENVIRONMENT PASS_IN_FROM_ENV_VAR=ThisWasPassedCorrectly
+  PASS_REGULAR_EXPRESSION "PASS_IN_FROM_ENV_VAR: ThisWasPassedCorrectly"
+  )
+
+TRIBITS_ADD_ADVANCED_TEST( CTestScripts_TAAT_pass_env
+  TEST_0 CMND ${CMAKE_COMMAND}
+    ARGS -P ${CMAKE_CURRENT_SOURCE_DIR}/EchoEnvVarForTest.cmake
+    NUM_MPI_PROCS 1
+    PASS_REGULAR_EXPRESSION "PASS_IN_FROM_ENV_VAR: ThisWasPassedCorrectly"
+  ENVIRONMENT PASS_IN_FROM_ENV_VAR=ThisWasPassedCorrectly
+  )
