@@ -1278,6 +1278,7 @@ FUNCTION(UNITEST_PACKAGE_ADD_EXECUTABLE_AND_TEST)
     STANDARD_PASS_OUTPUT
     PASS_REGULAR_EXPRESSION "regex1;regex2"
     FAIL_REGULAR_EXPRESSION "regex1;regex2"
+    ENVIRONMENT env1=envval1 env2=envval2
     WILL_FAIL
     TIMEOUT
     )
@@ -1287,7 +1288,7 @@ FUNCTION(UNITEST_PACKAGE_ADD_EXECUTABLE_AND_TEST)
     )
   UNITTEST_COMPARE_CONST(
     PACKAGE_ADD_TEST_CAPTURE_ARGS
-    "execName;COMM;serial;mpi;CATEGORIES;category1;category2;HOST;host1;host2;XHOST;host1;host2;HOSTTYPE;hosttype1;hosttype2;XHOSTTYPE;hosttype1;hosttype2;NOEXEPREFIX;NOEXESUFFIX;NAME;testName;NAME_POSTFIX;testNamePostfix;DIRECTORY;dir;KEYWORDS;keyword1;keyword2;NUM_MPI_PROCS;numProcs;PASS_REGULAR_EXPRESSION;regex1;regex2;FAIL_REGULAR_EXPRESSION;regex1;regex2;STANDARD_PASS_OUTPUT;WILL_FAIL;TIMEOUT;ADD_DIR_TO_NAME"
+    "execName;COMM;serial;mpi;CATEGORIES;category1;category2;HOST;host1;host2;XHOST;host1;host2;HOSTTYPE;hosttype1;hosttype2;XHOSTTYPE;hosttype1;hosttype2;NOEXEPREFIX;NOEXESUFFIX;NAME;testName;NAME_POSTFIX;testNamePostfix;DIRECTORY;dir;KEYWORDS;keyword1;keyword2;NUM_MPI_PROCS;numProcs;PASS_REGULAR_EXPRESSION;regex1;regex2;FAIL_REGULAR_EXPRESSION;regex1;regex2;ENVIRONMENT;env1=envval1;env2=envval2;STANDARD_PASS_OUTPUT;WILL_FAIL;TIMEOUT;ADD_DIR_TO_NAME"
     )
 
   MESSAGE("\n***")
